Removed large files for commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .virtualenv/
 .vscode/
-src/models/
-src/images/
+# src/models/
+# src/images/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
